Fix: fixed rounder alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -457,7 +457,6 @@ body.scale-cv{
 .scale-cv .experience__rounder{
     width: 11px;
     height: 11px;
-    margin-top: .22rem;
 }
 
 .scale-cv .education__line,
